# basics

./: CMakeLists.txt  README.md  build.sh  run_teach_cluster.sh  vec_add_driver.cpp
include/: utils.h  vec_add.h
model/: vec_add.py
src/: utils.cpp  vec_add.cpp
test/: vec_add_test.cpp
